# INTERNSHIP

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json  vercel.json
.github/workflows/: ci-cd.yml  deploy.yml
backend/: .env.example  .env.example.template  .gitignore  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  setup.py
backend/app/: ai_models.py
backend/app/core/: aws.py  config.py
backend/core/: config.py  logging.py  monitoring.py  rate_limit.py
backend/models/: admin.py  interview.py  job.py  user.py
backend/routers/: admin.py  ai.py  auth.py  candidates.py  forms.py  jobs.py  recruiter.py
backend/tests/: conftest.py
backend/tests/routers/: test_auth.py
frontend/: .env.example  .env.production  .gitignore  .npmrc  craco.config.js  jest.config.js  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/public/: index.html  manifest.json
frontend/src/: App.jsx  index.css  setupTests.js
frontend/src/api/: axios.js
frontend/src/components/: Layout.jsx  Login.jsx  ProtectedRoute.jsx
frontend/src/components/__tests__/: InterviewBot.test.jsx  JobDescriptionGenerator.test.jsx  Login.test.jsx  ResumeAnalysis.test.jsx
frontend/src/components/admin/: Analytics.jsx  BackupSystem.jsx  (+2 more)
frontend/src/mocks/: server.js
frontend/src/pages/: About.jsx  Contact.jsx  Home.jsx  InterviewBot.jsx  JobListings.jsx  JobPosting.jsx  Jobs.jsx  Login.jsx  NotFound.jsx  Register.jsx  ResumeViewer.jsx
frontend/src/services/: api.js
frontend/src/store/: auth.js
(+15 files in other folders)
