[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A FastAPI backend application"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-jose==3.3.0",
    "passlib==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.6",
    "pydantic==2.4.2",
    "sqlalchemy==2.0.23",
    "python-dotenv==1.0.0",
    "motor==3.3.1",
    "pymongo==4.6.0",
    "email-validator==2.1.0.post1",
    "redis==5.0.1",
] 